fix: h1 img use text-align: center

--- a/index.sass
+++ b/index.sass
@@ -42,18 +42,13 @@ header,main,footer,.copyright
     max-width: 855px
 
 header
-    .logo
-        height: 87px
-        background: #fff url(../image/logo.png) no-repeat center
-        background-size: 47%
-        @include rwd-sm
-            background-size: 80%
     h1
         padding: 10px
+        text-align: center
         background-color: #fff
     img
-        display: block
-        margin: 0 auto
+        // display: block
+        // margin: 0 auto
         width: 45%
         @include rwd-md
             width: 60%
